--- a/node-web/package.json
+++ b/node-web/package.json
@@ -21,8 +21,10 @@
     "fs": "^0.0.1-security",
     "mqtt": "^5.10.3",
     "node-notifier": "^10.0.1",
+    "nodemailer": "^6.9.16",
     "notie": "^4.3.1",
     "popups": "^1.1.3",
+    "pushsafer-notifications": "^0.2.0",
     "toastify-js": "^1.12.0",
     "uuid": "^11.0.3"
   }
